challenge15/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-db
  namespace: ktaktak
spec:
  podSelector:
    matchLabels:
      app: mongodb 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: webdb 
    - podSelector:
        matchLabels:
          app: webnodb 
    ports:
    - protocol: TCP
      port: 27017
